fixed button spacing

--- a/public/index.css
+++ b/public/index.css
@@ -219,7 +219,7 @@ nav ul .nav-hover:hover {
   text-align: left;
   position: absolute;
   color: #333333;
-  top: 1350px;
+  top: 1400px;
   z-index: 2;
 }
 
@@ -249,7 +249,6 @@ nav ul .nav-hover:hover {
   z-index: 5;
   border-radius: 2px;
   margin-bottom: 20px;
- /* border: 1px solid #616161;*/
   background: #f2f2f2;
   margin-bottom: 100px;
   margin: auto;
