--- a/public/new-recipe.css
+++ b/public/new-recipe.css
@@ -112,7 +112,6 @@ textarea {
   display: inline-block;
   font-size: 20px;
   color: #333333;
-  letter-spacing: 1px;
 }
 
 .recipe-type,
