--- a/public/recipes.css
+++ b/public/recipes.css
@@ -153,6 +153,7 @@ nav ul .nav-hover:hover {
 .delete-btn,
 .edit-btn {
   position: relative;
+  margin-bottom: 5px;
   float: right;
   bottom: 10px;
   padding: 3px;
